jenkins-slave.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-slave
  namespace: jenkins
spec:
  serviceAccount: jenkins-admin
  containers:
  - name: jnlp
    image: jenkins/jnlp-agent-maven:jdk11
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: docker-bin
        mountPath: /usr/bin/docker
      - name: docker-sock
        mountPath: /var/run/docker.sock
      - name: docker-daemon
        mountPath: /etc/docker/daemon.json
      - name: maven-cache
        mountPath: /root/.m2
      - name: kubectl-bin
        mountPath: /usr/bin/kubectl
      - name: kubectl-config
        mountPath: /etc/kubernetes/admin.conf
  volumes:
    - name: docker-bin
      hostPath:
        path: /usr/bin/docker
    - name: docker-sock
      hostPath:
        path: /var/run/docker.sock
    - name: docker-daemon
      hostPath:
        path: /etc/docker/daemon.json
    - name: maven-cache
      nfs:
        server: 10.1.161.30
        path: /nfs/maven/repository
    - name: kubectl-bin
      hostPath:
        path: /usr/bin/kubectl
    - name: kubectl-config
          hostPath:
            path: /etc/kubernetes/admin.conf
